--- a/index.html
+++ b/index.html
@@ -6,10 +6,22 @@
 
 	<title>Library &rsaquo; The Odin Project</title>
 
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+
 	<script src="js/library.js"></script>
 
 </head>
 <body>
-
+<header>
+	<h1>Library</h1>
+</header>
+<main>
+	<aside>
+		<button>Add a New Book</button>
+	</aside>
+	<section>
+		
+	</section>
+</main>
 </body>
 </html>
