Implementation of placeholder navigation for features to be added at a later time.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
 
 </head>
 <body>
-<header>
+<header id="page-heading">
 	<h1>Library</h1>
+
+	<nav>
+		<ul>
+			<li>New Book +</li>
+			<li>Read</li>
+			<li>Want to Read</li>
+		</ul>
+	</nav>
 </header>
 <main>
 	<aside>
