Addition of more placeholder content in the index file; starting to look like an actual user interface, kinda! :P

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 		<button>Add a New Book</button>
 	</aside>
 	<section>
-		
+		<h3>Hmmm... there doesn't seem to be anything on your bookshelf, yet.</h3>
+		<p>Add books to your library is easy. It all starts with the click of that button, right up there!</p>
 	</section>
 </main>
 </body>
